# Rust-Backend

./: .env  .env.test  .gitignore  Cargo.toml  README.md  docker-compose.yml
.cargo/: config.toml
.github/workflows/: ci.yml
cli/: Cargo.toml  README.md
cli/src/: lib.rs
config/: Cargo.toml  README.md
config/src/: lib.rs
db/: Cargo.toml  README.md
db/migrations/: 1750032563__create_notes.sql  1750197148__alter-users-fields.sql
db/src/: lib.rs
db/src/entities/: mod.rs  notes.rs  users.rs
db/src/test_helpers/: mod.rs  users.rs
jwt-lib/: Cargo.toml
jwt-lib/src/: lib.rs
macros/: Cargo.toml  README.md
macros/src/: lib.rs
web/: Cargo.toml  README.md
web/src/: auth.rs  error.rs  lib.rs  main.rs  routes.rs  state.rs
web/src/controllers/: mod.rs  notes.rs  tasks.rs
web/src/middlewares/: auth.rs
web/src/test_helpers/: mod.rs
web/tests/api/: main.rs  notes_test.rs  tasks_test.rs
